--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/comex
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+## enable it just at first time to create all tables automatically
+spring.jpa.generate-ddl=false
