Open API 3 config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,13 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+# swagger
+springdoc.api-docs.path=/api-docs
+
+produto.list=Listar Produtos
+produto.save=Salvar Produto
+categoria.list=Listar Categorias
+categoria.save=Salvar Categoria
+categoria.listPedidosPorCategoria=Listar pedidos por categoria
 ## enable it just at first time to create all tables automatically
 spring.jpa.generate-ddl=false
