cache and created user entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ categoria.save=Salvar Categoria
 categoria.listPedidosPorCategoria=Listar pedidos por categoria
 ## enable it just at first time to create all tables automatically
 spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
